--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
-<head>
-  <link rel="stylesheet" href="style.css">
-</head>
+body {
+  font-family: Arial, sans-serif;
+  background-color: #f5f5f5;
+  margin: 40px;
+}
+
+h1 {
+  color: #333;
+}
